<resources>
    <string name="app_name">Firebase Login</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="name">Your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="continue_without_signing_in">Continue without Signing in</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
</resources>
